<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="carbonfibers">Fibers</string>
    <string name="system_category">System</string>
    <string name="status_bar_category">Status bar</string>
    <string name="lock_screen_category">Lock screen</string>
    <string name="buttons_category">Buttons</string>
    <string name="gestures_category">Gestures</string>
    <string name="privacy_category">Privacy</string>
    <string name="system_global_actions_category">Global actions</string>
    <string name="status_bar_icons_category">Icons</string>
    <string name="status_bar_clock_category">Clock</string>
    <string name="lock_screen_security_category">Security</string>
    <string name="buttons_software_category">Software buttons</string>
    <string name="buttons_hardware_category">Hardware buttons</string>
    <string name="carbonfibers_dialog_title">Help us help you!</string>
    <string name="carbonfibers_dialog_message">Unfortunately, we are not wizards!\n\nSo, if you find a bug with any setting in CarbonFibers, please open up a ticket on Jira or contact a Carbon developer with the following.\n\n1. Blame kwoktopus\n2. Logcat and/or last_kmsg\n3. Kernel and mods used\n4. Useful information (subjective)\n\nIf you fail to report something with the above information, do not expect things to be fixed. Remember, we are not as perfect as Patrick, so we do miss things occasionally.</string>
    <string name="carbonfibers_dialog_toast">READ THE WHOLE THING!</string>
    <string name="anonymous_statistics_title">CarbonROM statistics</string>
    <string name="anonymous_statistics_summary">Help make CarbonROM better by opting into anonymous statistics reporting</string>
    <string name="anonymous_statistics_warning_title">About</string>
    <string name="anonymous_statistics_warning">Opting into CarbonROM Statistics will allow non-personal data to be submitted to the
        developers of CarbonROM to track unique installations across devices. The information submitted includes an unique identifier,
        which does not compromise your privacy or personal data. The data is submitted during each boot.\n\nFor an example of the data that is submitted, tap on Preview Data.</string>
    <string name="enable_reporting_title">Enable reporting</string>
    <string name="preview_data_title">Preview data</string>
    <string name="view_stats_title">View stats</string>
    <string name="anonymous_learn_more">Learn more</string>
    <string name="preview_id_title">Unique ID</string>
    <string name="preview_device_title">Device</string>
    <string name="preview_version_title">Version</string>
    <string name="preview_country_title">Country</string>
    <string name="preview_carrier_title">Carrier</string>
    <string name="stats_collection_title">Stats collection</string>
    <string name="stats_collection_summary">When enabled, allows metrics collection</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_summary">Save battery by shutting off extra pixels</string>
    <string name="smart_pixels_enable_title">Enable Smart Pixels</string>
    <string name="smart_pixels_enable_summary">Shut off pixels to reduce power consumption</string>
    <string name="smart_pixels_on_power_save_title">Auto-enable on battery saver</string>
    <string name="smart_pixels_on_power_save_summary">Enable Smart Pixels when battery saver is enabled</string>
    <string name="smart_pixels_percent">Percent of pixels to disable</string>
    <string name="smart_pixels_shift">Prevent burn-in by shifting pixels every</string>
    <string name="smart_pixels_warning_text">Smart Pixels is a power saving feature. Depending on how many pixels you decide to turn off, you could see a significant improvement in battery life. For a good user experience, we recommend setting the amount of disabled pixels to 75 percent while shifting every 10 minutes.</string>
    <string name="double_tap_status_bar_sleep_title">Double-tap status bar to sleep</string>
    <string name="double_tap_status_bar_sleep_summary">Tap status bar twice to sleep</string>
    <string name="double_tap_lock_sleep_title">Double-tap lock screen to sleep</string>
    <string name="double_tap_lock_sleep_summary">Tap lock screen twice to sleep</string>
    <string name="global_actions_title">Power menu</string>
    <string name="global_actions_summary">Select what to show when you press the power button</string>
    <string name="global_actions_power">Power</string>
    <string name="global_actions_restart">Restart</string>
    <string name="global_actions_airplane">Airplane</string>
    <string name="global_actions_settings">Settings</string>
    <string name="global_actions_lockdown">Lock down</string>
    <string name="global_actions_soundpanel">Sound panel</string>
    <string name="global_actions_users">Users</string>
    <string name="global_actions_screenshot">Screenshot</string>
    <string name="global_actions_screenrecord">Screenrecord</string>
    <string name="global_actions_flashlight">Flashlight</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader</string>
    <string name="unlock_scramble_pin_layout_title">Scramble PIN layout</string>
    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
    <string name="status_bar_tuner_title">Edit icons</string>
    <string name="status_bar_tuner_summary">Choose which icons to show</string>
    <string name="navbar_tuner_title">Edit navigation bar</string>
    <string name="navbar_tuner_summary">Edit the navigation bar layout and buttons</string>
    <string name="lock_screen_shortcuts_title">Lock screen shortcuts</string>
    <string name="lock_screen_shortcuts_summary">Manage lock screen bottom shortcuts</string>
    <string name="volume_rocker_music_controls_title">Screen off playback control</string>
    <string name="volume_rocker_music_controls_summary">Hold volume keys to seek audio tracks when screen is off</string>
    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double-tap power button (slower wake response)</string>
    <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
    <string name="torch_power_button_gesture_lp">Hold power button</string>
    <string name="lockscreen_charging_current_title">Display charging info</string>
    <string name="lockscreen_charging_current_summary">Show the charging current and voltage</string>
    <string name="block_on_secure_keyguard_title">Disable quick settings</string>
    <string name="block_on_secure_keyguard_summary">Disables quick settings in secure lock screen</string>
    <string name="unlock_quick_unlock_control_title">Quick unlock</string>
    <string name="unlock_quick_unlock_control_summary">Immediately unlock on correct PIN/Password entry</string>
    <string name="status_bar_clock">Show clock</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_am_pm_title">Show AM/PM</string>
    <string name="status_bar_am_pm_info">Not available</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_am_pm_small">Small size</string>
    <string name="status_bar_am_pm_normal">Normal size</string>
    <string name="clock_date_display">Show date</string>
    <string name="clock_date_display_summary">Display custom date</string>
    <string name="clock_date_display_none">Hidden</string>
    <string name="clock_date_display_small">Small size</string>
    <string name="clock_date_display_normal">Normal size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Format: MM/DD/YY</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="vibration_on_charge_state_changed_title">Vibrate on plug/unplug</string>
    <string name="hide_apps_from_recents_title">Hide apps from recents</string>
    <string name="hide_apps_from_recents_summary">Prevent apps from appearing in recents</string>
    <string name="hide_from_recents_add_app">Add app</string>
    <string name="title_activity_carbon_recents_settings">Recents</string>
    <string name="carbon_gesture_preference_title">Carbon Gestures</string>
    <string name="carbon_gestures_summary">Configure custom global gestures</string>
    <string name="carbon_gestures_fingers_title">Fingers used for gesture</string>
    <string name="carbon_gestures_right_title">Right gesture</string>
    <string name="carbon_gestures_left_title">Left gesture</string>
    <string name="carbon_gestures_up_title">Up gesture</string>
    <string name="carbon_gestures_down_title">Down gesture</string>
    <string name="carbon_gesture_disabled">Disabled</string>
    <string name="carbon_gesture_back">Back</string>
    <string name="carbon_gesture_home">Home</string>
    <string name="carbon_gesture_recents">Recents</string>
    <string name="carbon_gesture_power">Power</string>
    <string name="carbon_gesture_volume_down">Volume down</string>
    <string name="carbon_gesture_volume_up">Volume up</string>
    <string name="carbon_gesture_volume_mute">Volume mute</string>
    <string name="carbon_gesture_screenshot">Screenshot</string>
    <string name="carbon_gesture_media_play_pause">Play/Pause media</string>
    <string name="carbon_gesture_media_skip">Skip media</string>
    <string name="carbon_gesture_media_previous">Previous media</string>
    <string name="carbon_gesture_customapp">Launch application</string>
    <string name="carbon_gesture_launch">Launch</string>
    <string name="battery_style_category">Battery</string>
    <string name="battery_style_title">Battery style</string>
    <string name="battery_style_summary">Change battery icon appearance</string>
    <string name="battery_style_port">Portrait</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_dotted_circle">Dotted circle</string>
    <string name="battery_style_solid_circle">Solid circle</string>
    <string name="battery_style_big_circle">Big circle</string>
    <string name="battery_style_big_dotted_circle">Big dotted circle</string>
    <string name="battery_style_text">Text</string>
    <string name="show_battery_percent_title">Show percentage</string>
    <string name="battery_percent_none">Do not show</string>
    <string name="battery_percent_outside">Show beside icon</string>
    <string name="battery_percent_inside">Show inside icon</string>
    <string name="pixel_navbar_anim_title">Enable Pixel animation</string>
    <string name="pixel_navbar_anim_summary">Display the Pixel home button animation</string>
</resources>