<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2018 CarbonROM

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/status_bar_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/status_bar_icons_category">

        <Preference
            android:title="@string/status_bar_tuner_title"
            android:summary="@string/status_bar_tuner_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.StatusBarIconsTunerActivity" />
        </Preference>

        <com.android.settings.carbon.SystemSettingListPreference
            android:key="status_bar_battery_style"
            android:title="@string/battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="0" />

        <com.android.settings.carbon.SystemSettingListPreference
            android:key="show_battery_percent"
            android:title="@string/show_battery_percent_title"
            android:entries="@array/battery_percent_entries"
            android:entryValues="@array/battery_percent_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_clock_category">

        <SwitchPreference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="status_bar_clock_seconds"
            android:title="@string/clock_seconds_display"
            android:dependency="status_bar_clock"
            android:defaultValue="false" />

        <com.android.settings.carbon.SystemSettingListPreference
            android:key="statusbar_clock_style"
            android:title="@string/status_bar_clock_style_title"
            android:dialogTitle="@string/status_bar_clock_style_title"
            android:entries="@array/status_bar_clock_style_entries"
            android:entryValues="@array/status_bar_clock_style_values"
            android:dependency="status_bar_clock" />

        <com.android.settings.carbon.SystemSettingListPreference
            android:key="status_bar_am_pm"
            android:title="@string/status_bar_am_pm_title"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/status_bar_am_pm_entries"
            android:entryValues="@array/status_bar_am_pm_values"
            android:dependency="status_bar_clock" />

        <com.android.settings.carbon.SystemSettingListPreference
            android:key="clock_date_display"
            android:title="@string/clock_date_display"
            android:summary="@string/clock_date_display_summary"
            android:entries="@array/clock_date_display_entries"
            android:entryValues="@array/clock_date_display_values"
            android:dependency="status_bar_clock" />

        <com.android.settings.carbon.SystemSettingListPreference
            android:key="clock_date_style"
            android:title="@string/clock_date_style"
            android:entries="@array/clock_date_style_entries"
            android:entryValues="@array/clock_date_style_values"
            android:dependency="clock_date_display" />

        <ListPreference
            android:key="clock_date_format"
            android:title="@string/clock_date_format"
            android:entries="@array/clock_date_format_entries_values"
            android:entryValues="@array/clock_date_format_entries_values"
            android:dependency="clock_date_display" />

    </PreferenceCategory>

</PreferenceScreen>
